style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Whisper&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
:root {
    --clr-blk: #212121;
    --clr-white: #ebe7e7;
    --clr-grey: #d0c8c8;
    --clr-lightGrey: #e2e2e2;
    --clr-green: #9a8a46;
    --clr-lightGreen: #a9ba80;
    --clr-midGreen: #323826;
    --clr-darkGreen: #262a18;
    --clr-darkerGreen: #31381e;
}
body {
    background-color: var(--clr-darkGreen);
    font-family: 'Poppins', sans-serif;
    color: var(--clr-white);
    cursor: default;
    overflow-x: hidden;
}
::-webkit-scrollbar {
    width: 13px;
}
::-webkit-scrollbar-track {
    background-color: var(--clr-white);
}
::-webkit-scrollbar-thumb {
    background-color: var(--clr-green);
    border-radius: 5px;
}
/*PARALLAX HERO*/
.parallax {
    height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    filter: brightness(95%);
    z-index: -1;
}
.parallax img {
    position: absolute;
    height: 100%;
    width: 100%;
    object-fit: cover;
}
/*HEADER*/
header h1 {
    position: relative;
    top: 13rem;
    font-weight: 500;
    font-size: clamp(1rem, 3vw, 2rem);
    background: var(--clr-darkGreen);
    border: solid 5px var(--clr-lightGrey);
    padding: 2rem 3rem;
    text-transform: uppercase;
    letter-spacing: 5px;
    z-index: 1;
}
/*POLAROIDS*/
.polaroids {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    background-color: var(--clr-darkGreen);
}
.polaroids .text {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    color: var(--clr-lightGrey);
    width: 100%;
    padding: 2rem;
}
.polaroids .text h2 {
    text-transform: capitalize;
    letter-spacing: 1px;
    font-weight: 500;
}
.polaroids .text p {
    font-weight: 400;
    line-height: 2;
    margin: 10px auto;
}
.polaroids .text #quote {
    font-size: clamp(.9rem, 3vw, 1rem);
    font-weight: 300;
}
.polaroids .text span {
    font-size: 1.4rem;
    position: relative;
    top: .3rem;
}
.polaroids .img-wrapper {
    padding: 2rem;
    position: relative;
}
.polaroids .img-wrapper img {
    width: 100%;
    height: auto;
    border: var(--clr-white) solid 5px;
    border-bottom: 60px solid var(--clr-white);
}
.polaroids .img-wrapper p {
    position: absolute;
    display: inline-block;
    bottom: 3rem;
    left: 0;
    width: 100%;
    color: var(--clr-blk);
    letter-spacing: 1px;
    text-align: center;
    text-transform: capitalize;
    font-size: clamp(1.8rem, 3vw, 2rem);
    font-family: 'Whisper', cursive;
    font-weight: 800;
}
/*BOOK NOW PARALLAX*/
#parallax-slow {
    padding: 2rem;
    background-image: url(./img/mountain_lake.webp);
    position: relative;
    background-size: cover;
}
#parallax-slow button {
    display: block;
    background-color: var(--clr-blk);
    border: none;
    border-radius: 5px;
    padding: 15px 25px;
    margin: 25px auto;
    cursor: pointer;
}
#parallax-slow button a {
    display: block;
    color: var(--clr-white);
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: .5px;
    text-decoration: none;
    padding: 15px 25px;
    margin: -15px -25px;
}
.mobile-only {
    display: none;
}
/*ACTIVITIES*/
.title {
    position: relative;
    top: 1.5rem;
}
.title h2 {
    text-align: center;
    font-size: clamp(1.25rem, 3vw, 1.5rem);
    letter-spacing: .25px;
    text-transform: uppercase;
    font-weight: 500;
    line-height: 2;
}
.title p {
    text-align: center;
    text-transform: capitalize;
    font-size: clamp(1rem, 3vw, 1.2rem);
    letter-spacing: .25px;
}
.activities {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding: 2rem;
    gap: 1rem;
    width: 85%;
    margin: 25px auto;
}
.activities .card {
    padding: 1rem;
    color: var(--clr-lightGrey);
    background-color: var(--clr-darkerGreen);
    border: var(--clr-lightGrey) solid 2px;
}
.activities .card .fa-solid {
    font-size: 1.4rem;
}
.activities .card h3 {
    text-transform: capitalize;
    letter-spacing: 1px;
    font-weight: 600;
    margin: .5rem auto .25rem;
}
.activities .card p  {
    color: var(--clr-lightGrey);
    font-size: clamp(.95rem, 3vw, 1rem);
}
/*PRICING*/
.pricing-wrapper {
    background-image: url(./img/pricingBG.webp);
    width: 100%;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
}
.pricing {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    width: 975px;
    margin: 0 auto;
    padding: 2rem;
}
.pricing .card {
    color: var(--clr-lightGrey);
    background-color: var(--clr-darkGreen);
    border: solid 2px var(--clr-lightGrey);
}
.pricing .card img {
    display: block;
    width: 100%;
    height: auto;
}
.pricing .card h3 {
    text-transform: capitalize;
    font-weight: 500;
    letter-spacing: 1px;
    text-align: center;
    line-height: 2;
    margin: 10px auto 0;
}
.pricing .card h3::before {
    content: '';
    width: .75rem;
    display: inline-block;
    position: relative;
    bottom: .3rem;
    right: .4rem;
    border-top: var(--clr-lightGrey) solid 2px;
}
.pricing .card h3::after {
    content: '';
    width: .75rem;
    display: inline-block;
    position: relative;
    bottom: .3rem;
    left: .4rem;
    border-top: var(--clr-lightGrey) solid 2px;
}
.pricing .card h4 {
    text-align: center;
    text-transform: capitalize;
    font-weight: 500;
    letter-spacing: .75px;
}
.pricing .card p {
    padding: .75rem;
    width: 100%;
    font-weight: 300;
}
.pricing button {
    display: block;
    background-color: var(--clr-lightGrey);
    border: none;
    border-radius: 5px;
    padding: 5px 20px;
    margin: 25px auto;
    transition: 250ms ease-in-out;
    cursor: pointer;
}
.pricing button a {
    display: block;
    color: var(--clr-blk);
    text-transform: uppercase;
    letter-spacing: .5px;
    text-decoration: none;
    padding: 5px 20px;
    margin: -5px -20px;
}
.pricing button:hover {
    background-color: var(--clr-lightGreen);
}
/*CONTACT FORM*/
.form-container {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 4rem;
}
.contact-form {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px 20px;
    width: 95%;
    border: var(--clr-lightGrey) 2px solid;
}
.contact-form .left-section {
    width: 35%;
    height: 100%;
}
.left-section h5 {
    font-weight: 400;
    font-size: clamp(1rem, 3vw, 1.1rem);
    color: var(--clr-lightGrey);
    letter-spacing: .5px;
    margin: 5px auto;
}
.left-section .contact-details ul {
    list-style: none;
    font-size: clamp(.85rem, 3vw, .9rem);
    letter-spacing: .5px;
}
.left-section .contact-details ul li {
    margin: 20px auto;
}
.left-section .contact-details ul li span {
    margin-left: .5rem;
    color: var(--clr-grey);
}
.left-section .social-media h5 {
    margin: 15px auto;
}
.left-section .social-media .fa-brands {
    display: inline-block;
    margin-right: 1.75rem;
    color: var(--clr-grey);
    cursor: pointer;
}
.contact-form .right-section {
    width: 65%;
}
.right-section h5 {
    font-size: clamp(.9rem, 3vw, .95rem);
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: .75px;
    text-align: center;
    letter-spacing: 1px;
    margin: 13px auto;
}
.right-section .input-box input,
.right-section .message-box textarea {
    width: 100%;
    height: 40px;
    margin: 3px auto;
    border: none;
    padding: 5px 5px;
    background-color: var(--clr-lightGrey);
}
.right-section .message-box textarea {
    min-height: 90px;
    resize: none;
}
.right-section button {
    display: block;
    padding: 5px 40px;
    border: none;
    border-radius: 5px;
    margin: 10px auto 5px;
    transition: 250ms ease-in-out;
    cursor: pointer;
}
.right-section button a {
    text-transform: uppercase;
    font-weight: 500;
    color: var(--clr-blk);
    text-decoration: none;
}
.right-section button:hover {
    background-color: var(--clr-lightGreen);
}
/*FOOTER*/
footer {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-items: center;
    width: 100%;
    height: auto;
    padding: 2rem 1rem;
    background-color: var(--clr-midGreen);
}
footer h6 {
    font-size: clamp(.95rem, 3vw, 1rem);
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: 1px;
}
footer ul li {
    font-size: clamp(.8rem, 3vw, .85rem);
    text-transform: capitalize;
    letter-spacing: .75px;
    list-style: none;
    margin: 10px auto;
}
footer ul li a {
    text-decoration: none;
    color: var(--clr-lightGrey);
    cursor: pointer;
}
/*MEDIA QUERY'S*/
@media screen and (max-width: 900px) {
    .polaroids {
        grid-template-columns: repeat(1, 1fr);
    }
    #parallax-slow {
        background-image: none;
    }
    .mobile-only {
        display: block;
        width: 100%;
    }
    .mobile-only img {
        width: 100%;
        height: auto;
    }
    .activities {
        grid-template-columns: repeat(1, 1fr);
    }
    .pricing {
        grid-template-columns: repeat(1, 1fr);
        padding: 2rem 0;
        width: 85%;
        margin: 0 auto;
    }
}
@media screen and (max-width: 430px) {
    .polaroids .text {
        width: 100%;
        padding: 0 2rem;
    }
    .polaroids .text h2 {
        text-transform: capitalize;
        letter-spacing: 1px;
        font-weight: 500;
    }
    .polaroids .text p {
        margin: 0 auto 20px;
        width: 100%;
    }
    .pricing-wrapper {
        background-attachment: scroll;
    }
}

